Initial support for store operations in memory access unit

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 
-all: 
+all: maus
 
-alu: alu.sv alu_testbench.sv scmp.sv
-	iverilog alu.sv alu_testbench.sv scmp.sv -g2012
+alu: alu.sv alu_testbench.sv scmp.sv full_adder.sv
+	iverilog alu.sv alu_testbench.sv full_adder.sv scmp.sv -g2012
 
 cmp: cas_mag_cmp.sv cas_mag_cmp_tb.sv
 	iverilog cas_mag_cmp.sv cas_mag_cmp_tb.sv -g2012
@@ -14,5 +14,5 @@ scmps: scmp.sv scmps_tb.sv
 	iverilog scmp.sv scmps_tb.sv -g2012
 
 
-maus: wishbone.sv global_pkg.sv memory_access.sv memory_access_tb.sv
-	iverilog wishbone.sv global_pkg.sv memory_access.sv memory_access_tb.sv -g2012
+maus: wishbone.sv global_pkg.sv memory_access.sv full_adder.sv memory_access_tb.sv
+	iverilog wishbone.sv global_pkg.sv memory_access.sv full_adder.sv memory_access_tb.sv -g2012
