--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 
-all: maus
+all: soc
 
 alu: alu.sv alu_testbench.sv scmp.sv full_adder.sv
 	iverilog alu.sv alu_testbench.sv full_adder.sv scmp.sv -g2012
@@ -16,3 +16,9 @@ scmps: scmp.sv scmps_tb.sv
 
 maus: wishbone.sv global_pkg.sv memory_access.sv full_adder.sv memory_access_tb.sv
 	iverilog wishbone.sv global_pkg.sv memory_access.sv full_adder.sv memory_access_tb.sv -g2012
+
+cu: global_pkg.sv control_unit.sv full_adder.sv
+	iverilog global_pkg.sv full_adder.sv control_unit.sv -g2012
+
+soc: ram.sv alu.sv regfile.sv full_adder.sv control_unit.sv decoder.sv core.sv scmp.sv global_pkg.sv memory_access.sv soc.sv
+	iverilog ram.sv global_pkg.sv alu.sv regfile.sv control_unit.sv decoder.sv full_adder.sv scmp.sv memory_access.sv core.sv soc.sv -g2012
