Implementation of simple cache

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ cu: global_pkg.sv control_unit.sv full_adder.sv
 	iverilog global_pkg.sv full_adder.sv control_unit.sv -g2012
 
 soc: branch_unit.sv ram.sv alu.sv regfile.sv full_adder.sv control_unit.sv decoder.sv core.sv scmp.sv global_pkg.sv memory_access.sv soc.sv timer.sv uart.sv
-	iverilog branch_unit.sv ram.sv global_pkg.sv alu.sv regfile.sv control_unit.sv decoder.sv full_adder.sv scmp.sv memory_access.sv core.sv soc.sv uart.sv timer.sv spi.sv -g2012
+	iverilog branch_unit.sv ram.sv global_pkg.sv alu.sv regfile.sv control_unit.sv decoder.sv full_adder.sv scmp.sv memory_access.sv core.sv cache.sv soc.sv uart.sv timer.sv spi.sv -g2012
 
 bu: branch_unit.sv branch_unit_tb.sv
 	iverilog branch_unit.sv branch_unit_tb.sv -g2012
